Bring Writers API to Cast Archive parity
